# SDlab

./: .env.example  .gitignore  AGENTS.md  eslint.config.mjs  main.py  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
app/: AGENTS.md  page.tsx
components/: AGENTS.md  component-example.tsx
components/comfyui/: AGENTS.md  virtual-grid.tsx
components/ui/: AGENTS.md  pagination.tsx
data/: AGENTS.md
data/comfyui-flow/: CKNOOBRF.json  CKNOOBmain.json
documents/: comfyui-api-notes.md  common_prompts_category.md
e2e/: AGENTS.md  smoke.spec.ts  task-11-run-notfound.spec.ts  task-12-virtual-scroll.spec.ts  task-13-dialog-copy.spec.ts  task-14-main-flow.spec.ts  task-15-security.spec.ts  task-16-performance.spec.ts
hooks/: AGENTS.md
lib/: AGENTS.md  comfyui-fs.ts  comfyui-path.ts  comfyui-types.ts
scripts/: AGENTS.md  __init__.py  comfyui_part1_generate.py  convert_x_csv_to_json.py  prompt_grid.py  workflow_patch.py
scripts/cli/: AGENTS.md  __init__.py  io.py  menu.py  registry.py
scripts/generation/: __init__.py  comfyui_client.py  comfyui_part1_generate.py  prompt_grid.py  retry.py
tests/: AGENTS.md  test_comfyui_client.py  test_convert_x_csv_to_json.py  test_main_entrypoint.py  test_main_menu_convert.py  test_main_menu_edges.py  test_main_menu_generate.py  test_main_menu_loop.py  test_main_menu_r2.py  test_main_menu_trigger.py  test_negative_prompt_append.py  test_prompt_assets.py  test_prompt_grid.py  test_retry_policy.py  test_runner_dry_run.py  test_runner_ws_fallback.py  test_smoke.py  test_workflow_patch.py
types/: AGENTS.md
(+18 files in other folders)
